--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 PORT=3000
 DB_URL="mongodb+srv://MalikBasit:1234567890@cluster0.udto3xk.mongodb.net"
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=chai-aur-code6546878990897665fcfdxdzes54656
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=chai-aur-backendoihuhbn89890654ddfhddse754f
+REFRESH_TOKEN_EXPIRY=10d
+ CLOUD_NAME = djhao3ufj 
+  API_key = 178417168527824
+  api_secret=6ml7ZhnMeukuch-PYrhClQh9uHY
